samples/_failures_safe/1761354825_8c4b04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cced616d.c: In function ‘main’:
./samples/SAFE/__tmp_cced616d.c:155:5: error: expected expression at end of input
  155 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_cced616d.c:155:5: error: expected declaration or statement at end of input
